# lab15

./: CMakeLists.txt  REPORT.md
_builds/: CMakeCache.txt  Makefile  cmake_install.cmake  main
sources/: main.cpp
